WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
198712
Connection::waitForSyncReply() uses wall time clock for timeout
https://bugs.webkit.org/show_bug.cgi?id=198712
Summary
Connection::waitForSyncReply() uses wall time clock for timeout
p.stanek
Reported
2019-06-10 06:30:43 PDT
In a WPE port on a system where the browser is started automatically and interacted with as soon as the system is booted up this causes issues in case the system time has't been set yet.
Attachments
Patch
(1.73 KB, patch)
2019-06-10 06:54 PDT
,
p.stanek
no flags
Details
Formatted Diff
Diff
Patch
(1.73 KB, patch)
2019-06-10 07:00 PDT
,
p.stanek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
p.stanek
Comment 1
2019-06-10 06:54:37 PDT
Created
attachment 371738
[details]
Patch
p.stanek
Comment 2
2019-06-10 07:00:35 PDT
Created
attachment 371740
[details]
Patch
WebKit Commit Bot
Comment 3
2019-07-12 11:01:45 PDT
Comment on
attachment 371740
[details]
Patch Clearing flags on attachment: 371740 Committed
r247392
: <
https://trac.webkit.org/changeset/247392
>
WebKit Commit Bot
Comment 4
2019-07-12 11:01:47 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-07-12 11:02:25 PDT
<
rdar://problem/53017106
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug