Connection::waitForSyncReply() uses wall time clock for timeout https://bugs.webkit.org/show_bug.cgi?id=198712 Due to a nature of the system time (it might not be set, jump, be off by a lot) it is better to use monotonically increasing time which is exactly what's used in a similar place i.e. Connection::waitForMessage()

Patch by Pawel Stanek <p.stanek@metrological.com> on 2019-07-12
Reviewed by Alex Christensen.

* Platform/IPC/Connection.cpp:
(IPC::Connection::waitForSyncReply):

Canonical link: https://commits.webkit.org/213627@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247392 268f45cc-cd09-0410-ab3c-d52691b4dbfc